<resources>
    <string name="app_name">Integra-kids-mobile</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="title_games">Jogos</string>
    <string name="title_profile">Perfil</string>
    <string name="title_about">Sobre</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_configuration">Configurações</string>

    <string name="about_text_1">A plataforma "Integra Kids" foi desenvolvida com o objetivo de apoiar crianças do ensino fundamental que enfrentam dificuldades em matérias específicas. Com um ambiente lúdico e interativo, a plataforma oferece uma variedade de games educativos que tornam o aprendizado mais divertido e acessível. Ao identificar as áreas em que o aluno precisa de mais ajuda, a plataforma adapta as atividades, proporcionando um suporte personalizado que visa aumentar a confiança e a compreensão da criança.</string>
    <string name="about_text_2">Os jogos disponíveis na Integra Kids abrangem disciplinas, como: matemática, ciências e língua portuguesa. Cada jogo é projetado para ser divertido e desafiador, promovendo o engajamento dos alunos enquanto trabalham suas habilidades. A plataforma também conta com um sistema de feedback, que permite que os educadores e pais acompanhem o progresso da criança, identificando as dificuldades específicas e proporcionando conquistas ao longo do caminho.</string>
    <string name="about_text_3">Além disso, a Integra Kids oferece recomendações de games complementares baseados no desempenho do aluno. Quando uma criança encontra dificuldades em um conceito, a plataforma sugere atividades alternativas que reforçam o aprendizado de forma lúdica. Dessa maneira, a criança é redirecionada a games que atendem suas necessidades, facilitando a compreensão e promovendo um aprendizado mais eficaz e divertido. Com essa abordagem, a Integra Kids se torna uma ferramenta valiosa tanto para alunos quanto para educadores, contribuindo para um aprendizado significativo e divertido.</string>
    <string name="about_text_4">O personagem ilustrado é o símbolo central do projeto "Integra Kids". Com sua coroa dourada, capa vermelha e lápis gigante, ele representa o espírito aventureiro e criativo que a plataforma busca despertar nas crianças. Além de inspirar confiança e curiosidade, o mascote desempenha um papel essencial na conexão com o público infantil, tornando o aprendizado mais acessível e divertido. Sua presença lúdica e acolhedora ajuda a criar uma relação de proximidade, incentivando as crianças a explorar novas ideias e superar desafios de forma leve e engajante.</string>

    <string name="game_describe_cor">O Jogo das Cores ensina as crianças a identificar e nomear cores através de atividades lúdicas. Além de estimular a observação, ajuda a expandir o vocabulário e a criatividade.</string>
    <string name="game_describe_mem">O Jogo da Memória ajuda as crianças a melhorarem a concentração e a memória visual. Ao encontrar pares de cartas relacionadas a conceitos educativos, os alunos reforçam o aprendizado de forma divertida.</string>
    <string name="game_describe_num">Neste jogo, as crianças praticam a ordenação de números em sequência crescente ou decrescente. Essa atividade desenvolve o raciocínio lógico e familiariza os alunos com a sequência numérica.</string>
    <string name="game_describe_vog">Neste jogo, as crianças aprendem sobre vogais de forma interativa. Através de atividades de reconhecimento e combinação, desenvolvem habilidades de leitura e aumentam o interesse pela linguagem.</string>

    <string name="game_enun_cor">Objetivo: Analise as cores e escolha a cor que mais combina com cada animal.</string>
    <string name="game_enun_mem">Objetivo: Combine as cartas e encontre todas as cartas que tenham o mesmo icone.</string>
    <string name="game_enum_num">Objetivo: Selecione os números da segunda caixa e mande-os para a caixa verde, seguindo a sequencia dos valores: Menor para o Maior.</string>
    <string name="game_enum_vog">Objetivo: Identifique todas as vogais da segunda caixa e mande-as para a caixa verde, seguindo a sequencia alfabetica.</string>
</resources>
