<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.integra_kids_mobile.ui.views.jogos.JogosScreen"
        android:label="@string/title_games"
        tools:layout="@layout/jogos" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.integra_kids_mobile.ui.views.perfil.PerfilScreen"
        android:label="@string/title_profile"
        tools:layout="@layout/perfil" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.integra_kids_mobile.ui.views.sobre.SobreScreen"
        android:label="@string/title_about"
        tools:layout="@layout/sobre" />
    <fragment
        android:id="@+id/usuarioConfig"
        android:name="com.example.integra_kids_mobile.UsuarioConfig"
        android:label="usuario_config"
        tools:layout="@layout/usuario_config" />


</navigation>